example/errors/interpret/continue_outside_loop.box
println("haiz");


skip;
println("haizz");
